markdown (and CF problem)

--- a/olympiads/central_european/2011/2011.md
+++ b/olympiads/central_european/2011/2011.md
@@ -1,8 +1,15 @@
+# Central European OI 2011 Day 1
 https://oj.uz/problem/view/CEOI11_bal
 
-? - Balloons
+## 1 - Balloons
 
 Given two balloons x and y with x to the left of y, if we know the radius of x we can find the radius of y with math.
+Build a triangle with corners at the two centers. The hypotenuse is the sum of the two radii. Then we can solve for $r_2$ (second radius) if we know $r_1$.
+
+$$(r_1+r_2)^2 = (x_2-x_1)^2 + (r_1-r_2)^2$$
+$$r_1^2 + r_2^2 + 2r_1r_2 = (x_2-x_1)^2 + r_1^2 + r_2^2 - 2r_1r_2$$
+$$4r_1r-2 = (x_2-x_1)^2$$
+$$r_2 = {(x_2-x_1)^2 \over 4r_1}$$
 
 All that is left is to maintain a monotonic stack, because we know that for two balloons x and y, with x to the left of y,
 if the radius of y >= the radius of x then x will never be the answer to any balloons to the right of y.
