--- a/olympiads/central_european/2020/2020.md
+++ b/olympiads/central_european/2020/2020.md
@@ -1,11 +1,13 @@
-Day 1 #1 - Fancy Fence
+# Central European OI 2020 Day 1
+
+## 1 - Fancy Fence
 
 Let us first solve the case where all of the rectangle widths are 1.
 Our approach should be to find larger bounding rectangles and then for each one independently find the amount of distinct subrectangles.
 We can then try to for every rectangle assume its height to be the largest height in its bounding box, and find its nearest smaller values to find the largest bounding box.
 (it makes more intuitive sense, and less randomly-stumble-across-an-insight if you draw it out)
-Now we have cleanly split the fence into individual rectangles. Each rectangle, of size N*M, has a total of N(N+1)M(M+1)/4 subrectangles.
- - To avoid overflow, calculate N(N+1)M(M+1) % 1e9+7 and then multiply by the modular inverse of 4, which is 250000002.
+Now we have cleanly split the fence into individual rectangles. Each rectangle, of size $NM$, has a total of $N(N+1)M(M+1)/4$ subrectangles.
+ - To avoid overflow, calculate ${N(N+1)M(M+1)\mod 10^9+7}$ and then multiply by the modular inverse of 4, which is $250000002$.
 
 The issue is that we end up double-counting subrectangles if two rectangles overlap, so to avoid this we methodically subtract the amount of double-counted rectangles.
 Also if two fence posts of the same height are contained within the same rectangle then make sure to only count the rectangle one time.
