--- a/olympiads/baltic/2012/day_1/2012.md
+++ b/olympiads/baltic/2012/day_1/2012.md
@@ -12,9 +12,9 @@ We will denote these endpoints as $X_1$ and $X_2$.
 Then, $R$ works if there exists some point on the highway not contained in any segment $(X_1,X_2)$ - it is fine if it is on the endpoints of a segment.
 
 Note that the x-coordinates are given in sorted order, so for strictly increasing x coordinates, the coordinate $X_1$ will strictly increase.
-This means that we can store the largest $X_2$ coordinate so far, and update it if some $X_1$ < our $X_2$ (meaning the two segments intersect). Then, the answer is if $L$ >= the maximum $X_2$.
+This means that we can store the largest $X_2$ coordinate so far, and update it if some $X_1 < X_2$ (meaning the two segments intersect). Then, the answer is if $L \ge X_2$ at the end.
 
-However, for some pair of coordinates $(a,b),(c,d)$ such that $a = c$ and $b,d < 0$, the points are given as $(a,b)$,then $(c,d)$.
+However, for some pair of coordinates $(a,b),(c,d)$ such that $a = c$ and $b < d < 0$, the points are given as $(a,b)$,then $(c,d)$.
 But the $X_1$ coordinate for $(c,d)$ is less than the $X_1$ coordinate for $(a,b)$. In these cases though, although the $X_1$ point is less, the $X_2$ point is greater.
 So the segment for $(c,d)$ contains the segment for $(a,b)$, and thus it is simply fine to compare them in the order given.
 
@@ -37,15 +37,15 @@ The point where the bisector intersects the x-axis is equidistant to $A$ and $B$
  - So the point $D$ is equidistant from $A$ and $B$.<br><br>
 
  - Let's draw a point on the x-axis to the left of $D$, labeled $E$. 
- - We will prove $E$ is closer to $A$ than to $B$, that is, $\overline{EA} < \overline{EB}$.
+ - We will prove $E$ is closer to $A$ than to $B$; that is, $\overline{EA} < \overline{EB}$.
  - $\overline{ED} \cong \overline{ED}$ by the reflexive property, and $\overline{DA} \cong \overline{DB}$ (proved earlier). 
- - Now we have two triangles, $\triangle EDA$ and $\triangle EDB$. $\overline{EA}$ is shorter than $\overline{EB}$ if ${\angle EDA} > {\angle EDB}$.
+ - Now we have two triangles, $\triangle EDA$ and $\triangle EDB$. $\overline{EA}$ is shorter than $\overline{EB}$ if $m{\angle EDA} < m{\angle EDB}$.
  - Clearly, if two sides of a triangle are congruent then the greater the included angle the larger the third side.
  - You can also use law of cosines: $a^2 + b^2 - 2abcosC = c^2.$ In this case $a$ and $b$ are fixed, and across all points $E$ the angles $C$ are fixed.
  - The less the angle, the larger the result as cosine decreases from $[0,180]$, thus the third side is longer.<br><br>
 
- - Back to the proof: $\angle EDA$ is greater than $\angle EDB$ because $\overline{AD}$ and $\overline{BD}$ share a common point on the x-axis ($D$) and $A$ is to the left of $B$; thus $\angle EDB$ contains $\angle EDA$, so ${\angle EDA} > {\angle EDB}$.
+ - Back to the proof: $m\angle EDA < m\angle EDB$ because $\overline{AD}$ and $\overline{BD}$ share a common point on the x-axis ($D$) and $A$ is to the left of $B$; thus $\angle EDB$ contains $\angle EDA$, so $m{\angle EDA} < m{\angle EDB}$.
 
 Consider three points $A$, $B$, and $C$ ($A_x<B_x<C_x$), and draw the perpendicular bisectors of the line segments $\overline{AB}$ and $\overline{BC}$.
-If they, then all points from $A_x$ to $C_x$ are closer to $A$ and $C$ than $B$, so $B$ is irrelevant.
+If they intersect above or on the x-axis, then all points from $A_x$ to $C_x$ are closer to $A$ and to $C$ than to $B$, so $B$ is irrelevant.
 Therefore we can store all the points in a stack.
