--- a/olympiads/international/2009/day_2/2009.md
+++ b/olympiads/international/2009/day_2/2009.md
@@ -1,8 +1,10 @@
+# International OI 2009 Day 2
+
 https://oj.uz/problem/view/IOI09_mecho
 
-Day 2 Problem 2 - Mecho
+## 2 - Mecho
 
-Binary search on the latest time to leave the honeypot.
-For a given X, we must check if there is some path from M to D only on grassy squares.
+Binary search on the latest time to leave the honeypot, $X$.
+For a given $X$, we must check if there is some path from $M$ to $D$ only on grassy squares.
  - First let's do a multisource BFS from the hives to find the earliest time that any square gets covered by bees.
  - Then we can do a BFS from Mecho's spot. A spot is reachable if the earliest time we can get to it is less than the earliest time it is covered by bees.
