--- a/codeforces/contests/1994/1994.md
+++ b/codeforces/contests/1994/1994.md
@@ -20,7 +20,7 @@ There is no solution if there are an odd number of unhappy nodes because you can
 
 Although we know that we can always partition an even number of unhappy nodes into pairs, we still must explicitly find one.
 
-Consider this: if there is a cycle, then each node has an even degree. So if we remove a cycle, we remove an even number of nodes from all edges involved, and thus there is no point in this. Now if two nodes $A$ and $B$ are on a cycle, then there are two paths between $A$ and $B$. It may be the case that you can build two disjoint paths between two unhappy pairs of nodes that go on the two paths between $A$ and $B$, but if this is the case then you can always rearrange the pairs so that this does not happen. 
+Now the above mentions that if two paths cross we can separate them. Same goes for a cycle; if multiple paths form a cycle then we can rearrange the pairs such that this doesn't happen.
 
 So if we don't deal with cycles, then we can simply reduce the graph to a spanning tree. From here the problem becomes much easier, as if a node is unhappy then we remove the edge between it and its parent, and update the parity of both. This algorithm is equivalent to pairing up unhappy nodes in the same subtree.
 
