--- a/codeforces/contests/1988/1988.md
+++ b/codeforces/contests/1988/1988.md
@@ -7,7 +7,7 @@ The solution covers an (I think) $O(N)$ solution using cartesian trees but I'm u
 First we will for every element assume it is the minimum (find all ranges where it is minimum), so find the nearest smaller values with a stack. If we sum these up we get the initial answer without removing any elements.
 Now when you remove an element there are three things you have to consider: the element itself, elements with this as a nearest smallest value, and elements with this inside their $(l,r)$ nearest smaller value range.
 
-The element itself: Subtract the amount this single element contributes to the answer (without removals).
+The element itself: Subtract the amount this single element contributes to the answer.
 
 Elements with this as a nearest smaller value ($i=l$ or $i=r$): we need to calculate second nearest smallest values (as either $l$ or $r$ will change), and then just find the difference between this outcome and the original. This is where the $logN$ factor comes from as to do this we need to use a set. If we can do this some way in $O(N)$ then the total runtime is $O(N)$.
 
