--- a/codeforces/contests/1994/1994.md
+++ b/codeforces/contests/1994/1994.md
@@ -12,7 +12,7 @@ So we can restrict the graph to optional edges, and divide the nodes into two gr
 
 ### Solution Part 2 (harder part)
 
-Then we can make some key observations: if you remove an edge between two unhappy nodes, they both become happy. If you remove an edge between an unhappy and happy node, they swap states. If you remove two edges from a node, its state does not change. Thus, if two unhappy nodes are connected by a chain of happy nodes, you can remove all edges along that chain to make the two nodes happy. This leads us to another conclusion: if there are an odd number of unhappy nodes, then there is no solution; otherwise, there is always a solution. This is because we can divide the $2K$ unhappy nodes into $K$ pairs such that there are $K$ disjoint paths (sharing no edges), each satisfying a pair of unhappy nodes. If two pairs $(A,C)$ and $(B,D)$ share a common path then we can simply rearrange the pairs to $(A,B)$ and $(C,D)$ (or $(A,D),(B,C)$ depending on the structure of the graph).
+Then we can make some key observations: if you remove an edge between two unhappy nodes, they both become happy. If you remove an edge between an unhappy and happy node, they swap states. If you remove two edges from a node, its state does not change. Thus, if two unhappy nodes are connected by a chain of happy nodes, you can remove all edges along that chain to make the two nodes happy. This leads us to another conclusion: if there are an odd number of unhappy nodes, then there is no solution; otherwise, there is always a solution. This is because we can divide the $2K$ unhappy nodes into $K$ pairs such that there are $K$ disjoint paths (sharing no edges), each satisfying a pair of unhappy nodes. If two pairs $(A,C)$ and $(B,D)$ share a common edge on their paths then we can simply rearrange the pairs to $(A,B)$ and $(C,D)$ (or $(A,D),(B,C)$ depending on the structure of the graph).
 
 There is no solution if there are an odd number of unhappy nodes because you cannot divide them into pairs. The only side case is if there are an odd number of odd parity nodes (when restricted to optional edges) trying to become even (because you can remove all edges), but intuitively this configuration is impossible.
 
