--- a/olympiads/international/2011/2011.md
+++ b/olympiads/international/2011/2011.md
@@ -1,3 +1,15 @@
+# IOI 2011 Day 1
+
+https://oj.uz/problem/view/IOI11_garden
+
+## 1. Tropical Garden
+
+Yeah yeah yeah this got put into Silver "<i>Intro</i> to Functional Graphs". I do think that it being rated Very Hard underrates it a bit considering the massive amount of time I spent on the implementation. Though, the thought process isn't terribly difficult. We should note that there are two states for each node: if you just came from the most beautiful path or not. Using this we can simulate the path of the group from any given node, from either state.
+
+Importantly, when at a given node and state there is only one road that you can take. So we can separately find the distances from all nodes to both states of node $P$ with dfs, and then check if the distances are equal to $K$ in $O(N)$ time per query.
+
+But this isn't the full answer. Specifically, if there is a cycle containing either state of node $P$, then there is the option to continuously traverse the cycle after reaching node $P$. More formally, if the length of the cycle is $L$ and the distance from node $P$ to some other node is $L_2$, then the path works if $(K-L_2)\%L = 0$. Two dfs's works to check if either state of $P$ is in a cycle (and retrieve the length of the cycle if it exists). The time complexity is $O(NQ)$.
+
 # IOI 2011 Day 2
 
 https://oj.uz/problem/view/IOI11_crocodile
@@ -6,7 +18,7 @@ https://oj.uz/problem/view/IOI11_crocodile
 
 Simplifying the problem down, we must find a DAG such that the outdegree of every non-exit node is $2$ (unless there is some isolated cycle, but without loss of generality assume there isn't one). We want to find a valid DAG such that the longest path is minimum.
 
-It turns out we can do this with a modification of Dijkstra. We start from the exit nodes, and we define $dist[i]$ as the minimum longest path starting from $i$ in a valid DAG. For a given node $i$, $dist[i]$ is the second-smallest $dist[j]$ for all nodes $j$ adjacent to $i$, so store two minimums for each $i$ and update accordingly. 
+It turns out we can do this with a modification of Dijkstra. We start from the exit nodes, and we define $dist[i]$ as the minimum longest path starting from $i$ in a valid DAG. For a given node $i$, $dist[i]$ is the second-smallest $dist[j]$ for all nodes $j$ adjacent to $i$, so store two minimums for each $i$ and update accordingly. In total, it takes $O(N+MlogN)$.
 
 An interesting caveat (oj.uz subtask 3 test case 22):
 
