--- a/olympiads/international/2011/2011.md
+++ b/olympiads/international/2011/2011.md
@@ -18,7 +18,7 @@ https://oj.uz/problem/view/IOI11_crocodile
 
 Simplifying the problem down, we must find a DAG such that the outdegree of every non-exit node is $2$ (unless there is some isolated cycle, but without loss of generality assume there isn't one). We want to find a valid DAG such that the longest path is minimum.
 
-It turns out we can do this with a modification of Dijkstra. We start from the exit nodes, and we define $dist[i]$ as the minimum longest path starting from $i$ in a valid DAG. For a given node $i$, $dist[i]$ is the second-smallest $dist[j]$ for all nodes $j$ adjacent to $i$, so store two minimums for each $i$ and update accordingly. In total, it takes $O(N+MlogN)$.
+It turns out we can do this with a modification of Dijkstra. We start from the exit nodes, and we define $dist[i]$ as the minimum longest path starting from $i$ in a valid DAG. For a given node $i$, $dist[i]$ is the second-smallest $dist[j]+$ (edge weight between $i$ and $j$) for all nodes $j$ adjacent to $i$, so store two minimums for each $i$ and update accordingly. In total, it takes $O(N+MlogN)$.
 
 An interesting caveat (oj.uz subtask 3 test case 22):
 
