--- a/olympiads/international/2004/day_2/2004.md
+++ b/olympiads/international/2004/day_2/2004.md
@@ -1,8 +1,22 @@
 # International OI 2004 Day 2
 
-https://dmoj.ca/problem/ioi04p4
+## 1. Empodia
+
+Hell. I solved the problem this morning, close to ten hours ago. But it didn't work on the codeforces IOI archive. You know why? Because $M <= 2*10^6$ on there, so the I/O caused my program to time out. What's worse is it didn't tell me that I got TLE on test cases, just that it didn't pass subtask 3. Unfortunate ig; I spent so much time debugging, and I literally only made three changes to my original program from start to finish. Yeah yeah the time limit is so tight on the CF version. Thanks USACO guide for the faster i/o code though.
+
+The overarching strategy is to find the minimum length framed interval starting from each $i$, and then to find the amount of intervals that don't contain another interval (definition of an empodio). For the second part maintain a stack; see CSES/sorting_searching/nested_ranges_check for a more detailed description on how to do this. The first part now: we'll define a set of rules that constitute all framed intervals:
+
+An interval from $i$ to $j$ is a framed interval iff:
+ - $a[j]-a[i]$ = $j-i$ (so $a[j]-j = a[i]-i$. Group all numbers by $a[idx]-idx$, denoted $v[idx]$.)
+ - $a[i]$ is the minimum of the range (so the index of the nearest smaller value to the right of $a[i]$ (denote $s_i$) is $> j$.)
+ - $a[j]$ is the maximum of the range (so the index of the nearest larger value to the left of $a[j]$ ($l_j$) is $< i$.)
+
+For every $i$ we'll find the nearest $j$ such that $j > i$, $v[j]=v[i]$, and $l_j < i$. So fix $v$ (satisfying rule $1$) and then use a stack to calculate these $j$ such that $l_j<i$ (satisfying rule $2$). These $j$ values act as candidates for the minimum length framed interval beginning at $i$: if $s_i>j$ (satisfying rule $3$) then the framed interval is valid, and otherwise it is invalid. Now we have all valid framed intervals, so from here just use the algorithm I mentioned at the beginning to find all empodia. It, surprisingly, runs only in $O(N)$.
+
 
 ## 3 - Phidias
+
+https://dmoj.ca/problem/ioi04p4
 
 Define $dp[i][j]$ to be the minimum space wasted for a slab with width $i$ and height $j$.
 By default, $dp[i][j] = i*j$. The base cases are for the $N$ plates of size $i*j$, for which $dp[i][j] = 0$.
