these problems are getting too hard

--- a/codeforces/contests/1996/1996.md
+++ b/codeforces/contests/1996/1996.md
@@ -5,4 +5,4 @@ Bit of a break; also just been playing lots of elden ring lmao.
 
 Basically the greedy strategy is to select the largest element every time, so we can do this in $O(NK)$ naively or $O(KlogN)$ with a priority queue.
 
-If we rewrite each $a_i$ as an arithmetic sequence, then our goal is to merge all these sequences together and then take the largest $K$ values. So then we can just binary search on the $kth$ (generalize to last) element and find the largest working $X$ such that there are $>= K$ elements in the sequence if $X$ is the last element. Obviously, if no such $X$ exists then the union of all the arithmetic sequences has a size $< K$, so we just take all possible elements.
+If we rewrite each $a_i$ as an arithmetic sequence, then our goal is to merge all these sequences together and then take the largest $K$ values. So then we can just binary search on the $kth$ (generalize to last) element and find the largest working $X$ such that there are $\ge K$ elements in the sequence if $X$ is the last element. Obviously, if no such $X$ exists then the union of all the arithmetic sequences has a size $< K$, so we just take all possible elements.
