--- a/codeforces/contests/1997/1997.md
+++ b/codeforces/contests/1997/1997.md
@@ -4,9 +4,9 @@
 
 Well I'm back to Codeforces. And this problem well I solved it in 30-40 min but implementation literally took 3 hours lol. That's because I could have used an indexed set but my dumbass decided it would be more interesting to use segment trees instead (and my previous segtree implementation didn't work so I learned a new one).
 
-Ok ok, anyways, let's first note that we can precalculate all queries by finding, for each monster, the min $K$ such that you fight it. $K$ is monotonic in that if you fight a monster with some $K$, then $K+1$ works too. Second, your level monotonically increases, at most once every $K$ monsters. So, if we iterate over all multiples of each $K$ for all $K<=N$ then we get a harmonic series that can be approximated to $O(NlogN)$.
+Ok ok, anyways, let's first note that we can precalculate all queries by finding, for each monster, the min $K$ such that you fight it. $K$ is monotonic in that if you fight a monster with some $K$, then $K+1$ works too. Second, your level monotonically increases, at most once every $K$ monsters. So, if we iterate over all multiples of each $K$ for all $K\le N$ then we get a harmonic series that can be approximated to $O(NlogN)$.
 
-Observation 3: If you're currently at level $L$, then you level up again after fighting $K$ monsters with level $<= L$. With this, we'll iterate over all $L$ in increasing order, and maintain a set of monsters with level $<= L$. Then for each $K$, all we have to do is advance $K$ indices from our current position to simulate defeating $K$ monsters with level $<= L$ (indexed set, BIT, segment tree will work for this). Then, before we go from $L$ to $L+1$ we'll remove all monsters with level $L$ from the set. This part takes $O(Nlog^2N)$.
+Observation 3: If you're currently at level $L$, then you level up again after fighting $K$ monsters with level $\le L$. With this, we'll iterate over all $L$ in increasing order, and maintain a set of monsters with level $\le L$. Then for each $K$, all we have to do is advance $K$ indices from our current position to simulate defeating $K$ monsters with level $\le L$ (indexed set, BIT, segment tree will work for this). Then, before we go from $L$ to $L+1$ we'll remove all monsters with level $L$ from the set. This part takes $O(Nlog^2N)$.
 
 (Segment tree explanation): A monster in the set has value $1$, and $0$ otherwise. Then you just have to find the $Kth$ $1$ value from the current position.
 
