--- a/codeforces/contests/1942/1942.md
+++ b/codeforces/contests/1942/1942.md
@@ -1,12 +1,10 @@
 # CodeTON Round 8 (#1942)
 
 
-## D - Learning to Paint
-
+## D. Learning to Paint
 I will cover the solution, and then my solution process.
 
 ### Solution:
-
 It is not hard to see we should use dp. Let $dp[i]$ be an array containing the maximum $K$ values when painting cells $1...i$.
  - An easier problem that helped me figure this out is [1941E - Rudolph and k Bridges](https://codeforces.com/problemset/problem/1941/E).
  - The difference is that this problem gives each individual range a value while the above only gives each square (range of length $1$) a value (which is significantly easier to do).
@@ -18,9 +16,7 @@ The key is that we only need to take $K$ values, so if all the previous arrays a
 Thus transitioning takes $O(KlogN+NlogN)$ because you consider $i$ values for $K$ iterations; the $NlogN$ comes from initially inserting $i$ elements into the priority queue.
 Repeat this for all $i$, and our runtime is $O((N^2+NK)logN)$.
 
-
 ### Solution Process:
-
 Initially my solution ran in $O((N^2+NK)log^2N)$ because I used multisets instead of vectors for the dp array.
 Also, I stored $dp[i]$ as the $K$ largest values given that $i-1$ is painted blank.
 Then, I pulled values from $dp[i-1]$ (if you don't paint cell $i-1$) and then pushed values to $dp[i+2]$ (if you paint cell $i$ then cell $i+2$ will have a blank cell before it).
@@ -30,3 +26,18 @@ To speed it up to my current solution (~$500$ ms, $32$ MB) I first combined the 
  - Asssume that $dp[i-1]$'s values all have cell $i-1$ colored. Everything before doesn't matter so we do the same as before.
 
 This means that values in the current $dp[i]$ should already be sorted, so we can replace the multisets with vectors.
+
+## E. Farm Game
+First, we can assume without loss of generality that the first cow is FJ's cow, because we can just multiply by $2$ at the end to get our answer. Then we should note that we only care about every other grouping of two adjacent cows (i.e. a pair of adjacent cows, with FJ's cow first and FN's cow second).
+
+<details close><summary>Explanation</summary>
+Assume there are only four cows. Then the only condition for FN to win is if his first cow traps FJ's first cow (on the border), and his second cow traps FJ's second cow. So we only care about the relationships between FJ and FN's first cows, and FJ and FN's second cows.
+</details><br>
+
+More specifically, for these two-cow groupings ($a_i$ and $b_i$), FJ loses only if all the gaps between $a_i$ and $b_i$ are even (more formally, $b_i-a_i-1$ is even).
+
+<details close><summary>Explanation</summary>
+Reduce down to one pair of cows. Then FJ wins if the gap is odd and loses if the gap is even. When generalizing this, note that FJ wins if all gaps are even after his first move. So FJ on his first move can choose only to move the cows with odd gaps, thus ensuring that after this move all gaps are even. If all gaps are even to begin with, then FJ is forced to move cows to create an odd gap, so he will never win.
+</details><br>
+
+Use complementary counting, so count the number of configurations such that all gaps are even. You can do this by fixing the total sum of all gaps and then use stars and bars to count. In total, it runs in $O(L+logM)$ where $M$ is the mod.
