--- a/olympiads/balkan/2012/2012.md
+++ b/olympiads/balkan/2012/2012.md
@@ -6,4 +6,4 @@ We can build a tree of shortest paths where there's a directed edge from $i$ to 
 My solution considers ties between shortest paths:
 If there are ties between shortest paths, then (looking at other solutions, it doesn't seem to matter) break ties by checking the length of the lucky path between the source node ($A$ or $B$) and the root of the deepest subtree that contains this node, such that the root is on the lucky path. The smaller the distance (I give a rank to each one) the better (because it provides a wider time-in/time-out range), unless the node you're comparing it with is preceding this node on the lucky path. Then you haven't found an alternate path of the same length (which was the goal), you've just travelled the lucky path. If you don't need to do this then it's an easy $O(MlogN+MlogM)$ solution.
 
-Update: Rank doesn't matter. I commented out the ambiguous part in Dijkstra and it AC'd with the same runtime. If you want an explanation, seeing the USACO Guide official solution introduced some new ideas that seem to prove it. You could definitely simplify the code further to completely eliminate the rank system but well, it's $O(MlogN+MlogM)$ for sure now.
+Update: Rank doesn't matter. I commented out the ambiguous part in Dijkstra and it AC'd with the same runtime. If you want an explanation, there's no need to find an alternate path from a node $Y$ to some node $X$ on the lucky path (edge between $X$ and $Y$, btw), because $Y$ and $X$ will always be in opposite shortest path trees, so you'll consider that candidate path anyways. You could definitely simplify the code further to completely eliminate the rank system but well, it's $O(MlogN+MlogM)$ for sure now.
