--- a/codeforces/contests/1483/1483.md
+++ b/codeforces/contests/1483/1483.md
@@ -3,4 +3,4 @@
 ## E. Skyline Photo
 This problem perfectly suits itself to dp - there's a pretty simple $O(N^2)$ dp solution. To speed it up, we will make the dp transitions in $O(logN)$ rather than in $O(N)$.
 
-The $O(N^2)$ dp transitions are as follows: $dp[i]$ is the maximum beauty assuming all buildings $1\dots{i}$ are in pictures already. Following this, $dp[i] = max(dp[j]+b[min(H)])$ for all $j<i$, where $H$ is the index with the minimum height in the range $(j+1)\dots{i}$. First note that each element is the minimum value in a static range, which can be calculated with a stack. So if we parse the range $1\dots{i}$ into these smaller ranges $R$, each with a min value denoted $M_R$, then the best candidate for that range is the maximum dp value in the range plus $M_R$. Over all candidates select the best one with a multiset, so $O(NlogN)$.
+The $O(N^2)$ dp transitions are as follows: $dp[i]$ is the maximum beauty assuming all buildings $1\dots{i}$ are in pictures already. Following this, $dp[i] = max(dp[j]+b[H])$ for all $j<i$, where $H$ is the index with the minimum height in the range $(j+1)\dots{i}$. First note that each element is the minimum value in a static range, which can be calculated with a stack. So if we parse the range $1\dots{i}$ into these smaller ranges $R$, each with a min value denoted $M_R$, then the best candidate for that range is the maximum dp value in the range plus $M_R$. Over all candidates select the best one with a multiset, so $O(NlogN)$.
