--- a/codeforces/contests/1993/1993.md
+++ b/codeforces/contests/1993/1993.md
@@ -3,6 +3,6 @@
 ## F1. Dyn-scripted Robot (Easy version)
 Instead of inverting the commands whenever we try to go past a border, we will keep the commands the same but instead reflect the $W*H$ bounding box on the side that the robot is going past. If the robot reaches wherever the origin ends up reflecting to, then it effectively reaches $(0,0)$ when we invert the commands. It can be said that the origin will only end up reflecting to points of the form $(2KW,2KH)$ where $K$ is any integer. Therefore, whenever the robot reaches any point $(2KW,2KH)$, then it effectively has reached the origin when following the original rules. 
 
-Explanation as to why this is always true: Consider all possible rectangles that the original $W*H$ rectangle can reflect to, which will fully tile the xy plane. There needs to be no distinction between which rectangle we are in whenever the robot reaches $(2KW,2KH)$, because any two adjacent rectangles must share the same origin reflection point.
+Explanation as to why this is always true: Consider all possible rectangles that the original $W*H$ rectangle can reflect to, which will fully tile the xy plane. There needs to be no distinction between which rectangle we are in whenever the robot reaches $(2KW,2KH)$, because all rectangles that contain this point must share it as their origin reflection point.
 
 It remains to find the number of times the robot reaches $(2KW,2KH)$. For the first iteration of the script, we start at the origin, which is already of the form $(2KW,2KH)$. Now, after the $ith$ iteration, we should end up at some point, which can be expressed as $(2KW+x_i,2KH+y_i)$, where $x_i$ and $y_i$ represent the remainders when divided by $2KW$ and $2KH$, respectively. This should be no different from the first time running the script, except that we offset all points the robot gets to by $x_i$ and $y_i$. So if in the initial script, we find the number of times the robot reaches $(2K-x_i,2H-y_i)$ (store in a map), then when offsetting by $x_i$ and $y_i$ we reach a point of the form $(2KW,2KH)$, which we are looking for. Final time complexity: $O((N+K)logN)$.
