easy xor easy hash

--- a/codeforces/contests/2014/2014.md
+++ b/codeforces/contests/2014/2014.md
@@ -2,3 +2,6 @@
 
 ## G. Milky Days (estimate: 2000 i dont know why there are so few solves)
 The only important events are when Little John gains milk, and when milk expires; therefore run a scan line algorithm for these events. We can assume the last event was on day $i$, and this event is on day $j$. Then we need to be able to calculate the amount of milk satisfaction days between $i$ and $j$, which can easily be done. Just maintain a stack of available milk and continue popping off the stack until you satisfy all days from $i$ to $j$, or until the stack becomes empty. If you gain milk on day $j$, then push to the top of the stack because Little John drinks the freshest milk first, and if milk expires, then... well we could just maintain a deque and remove the back element, but it can be done pretty easily with a stack as well (keep it in the stack, just make sure that when popping elements you don't remove expired milk). It takes $O(N)$.
+
+## H. Robin Hood Archery
+The Sheriff can only tie the game at best, which is in the case that all elements appear an even number of times. If we given each unique element a random value $R_i$, then the above is satisfied for a query $l,r$, if $R_l\oplus{R_{l+1}}\oplus\dots\oplus{R_r} = 0$ because when we xor a number an even number of times, it equals $0$. To efficiently calculate the xor value of any range, just use prefix xor values. This runs in $O(N)$.
