more soon i hope

--- a/olympiads/international/2006/2006.md
+++ b/olympiads/international/2006/2006.md
@@ -1,5 +1,9 @@
 # IOI 2006 Day 1
 
-## 3. Deciphering the Mayan Writing
+## 2. Pyramid
+There are the same number of squares for each pyramid/chamber candidate, so the average height doesn't matter, only the total height. This means we want to maximize the total height, or that for each pyramid candidate, we want to minimize the sum of a chamber inside it. At the end we take the best result.
 
+Minimizing the sum of a chamber is a 2d range query that can be done by maintaining deques (see [minimum queue](https://cp-algorithms.com/data_structures/stack_queue_modification.html) on cp-algorithms). This is more efficient that other RMQ methods because we need to use a sliding window to calculate across all grids. We first create a deque for each column to retrieve the minimum area of a rectangle in each column of the grid. A second deque is needed to compile all minimum results from each column, in order to find the minimum result in the complete grid. Thus it takes $O(NM)$ with prefix sums.
+
+## 3. Deciphering the Mayan Writing
 Maintain a frequency table for all letters in $W$ and see if they match to any substring in $S$. This is done efficiently with a sliding window. $O(g+|S|A)$ where $A$ denotes the size of the alphabet.
