I did finish a contest

--- a/codeforces/contests/2037/2037.md
+++ b/codeforces/contests/2037/2037.md
@@ -1,5 +1,27 @@
 # Codeforces Round 988 (#2037)
 
+## A. Twice
+The strategy is: while there exists any two elements of the same value, pair them up. Therefore, maintain the frequency of every value. Sum all the frequencies divided by $2$ (and floored) because we pair them up with each other. So, $O(N)$.
+
+## B. Intercepted Inputs
+There is a grid with area $K-2$, so we just want to find two integers that multiply to $K-2$. Go through every possibility for $N$ and see if a corresponding $M$ exists (which is $K/N$). Also, take care of the side case where $N=M$. This runs in $O(K)$.
+
+## C. Superultra's Favorite Permutation
+The prefix of the permutation will be all the odd values, because the sum of two odd numbers is composite. The suffix will be all even numbers by the same logic. So, now it's just left to find the transition between odd and even numbers; we need an odd number and even number that add up to a composite number. The earliest achievable number like this is $9$ (which is $5+4$). So we can also say that if $N<5$ then there is no solution, and otherwise $5$ and $4$ are always present in the permutation (so there is always a solution). $O(N)$ runtime.
+
+## D. Sharky Surfing
+Store a sorted event list with all hurdles and powerups. When we get to a powerup, store it in a priority queue to select the maximum (I use multiset). We won't take this powerup now, but instead store it for later because we can always backtrack. Sort by largest because if we have to take powerups, then it's optimal to take the ones with the largest $v$ value. When we get to a hurdle, then we want to backtrack by constantly taking the most efficient powerup until we can cross this hurdle. If all powerups still don't make it, then it's impossible to pass. With two pointers, the algorithms takes $O(N+M)$.
+
+## E. Kachina's Favorite Binary String
+The only way we can't tell is if $f(1,n)=0$. Then any query we make will return $0$, so we won't know the answer. Otherwise, if we continuously querying prefixes, then we should eventually find some index such that $f(1,x)\ne{0}$. The earliest index that this occurs is denoted $x$, and the final string $s$. Then, it can be said that $s[x]=1$. There must be $f(1,x)$ $0$ values in the string; because $x$ is the smallest value for a nonzero $f(1,x)$, the numbers from $[x-1-f(1,x),x-1]$ must be $0$, and so the remaining numbers must all be $1$.
+
+After finding such a value $x$, then we can determine the rest of the string from all future queries. If $f(1,i)>f(1,i-1)$, then $s[i]=1$, and otherwise $s[i]=0$. There are $N$ queries so it runs in $O(N)$.
+
+## F. Ardent Flames
+If we binary search on $X$, the minimum number of rounds needed, then we can create a range $[l_i,r_i]$ for each monster $i$ such that for any position inside the range, the monster will die in at most $X$ turns. Now the goal is to find at most $K$ ranges that intersect, which can be done by sorting and sweeping across all endpoints. The runtime is $O(Nlog(N)\max(x_i))$.
+
+A variation I solved first: determine the minimum rounds to kill a consecutive range of $K$ monsters.
+
 ## G. Natlan Exploring
 Say that $dp[i]$ = the amount of ways to get to city $i$. $dp[0]=1$ as a base case. Then, $dp[i]$ is the sum of all $dp[j]$ such that $j<i$ and $gcd(a_i,a_j)\ne{1}$. If we denote the set of unique primes for $a_i$ as $S_i$, then $S_i\cap{S_j}\ne{\set{}}$. Therefore, find the primes for $a_i$ in $O(log\ {a_i})$ time. If we have decomposed all other $a_j$ into their prime factors, then just use inclusion-exclusion on the set of primes to find the total sum of $dp[j]$.
 
